feat: Mobile optimization for Coco Chatbot and backend updates

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -375,3 +375,14 @@ h6 {
     --background: #000000;
   }
 }
+
+/* Scroll Masks */
+.mask-fade-right {
+  mask-image: linear-gradient(to right, black 85%, transparent 100%);
+  -webkit-mask-image: linear-gradient(to right, black 85%, transparent 100%);
+}
+
+.mask-fade-x {
+  mask-image: linear-gradient(to right, transparent 0%, black 10%, black 90%, transparent 100%);
+  -webkit-mask-image: linear-gradient(to right, transparent 0%, black 10%, black 90%, transparent 100%);
+}
